a few responsive layout bugs fixed

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header{
     background: linear-gradient(var(--color-orangish) 0%,  var(--color-redish) 100%);
-    height: 70vh;
+    height: 40vh;
     width: 100%;
     border-radius: 0 0 0 100px;
 
